--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 .gradle
-build/
+build/classes
+build/kotlin
+build/resources
+build/snapshot
+build/tmp
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
