--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,6 @@ ktor_version=2.3.5
 kotlin_version=1.9.10
 logback_version=1.4.11
 kotlin.code.style=official
+
+postgresql_driver_version=42.6.0
+ktorm_version=3.6.0
